# autoresearch-routing

./: .gitignore  prep.md  prepare_routing.py  program.md  pyproject.toml  train.py
data/: dysko_gemma4_eval.jsonl  main-tuning.md
